<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item android:id="@+id/home"
        android:title="@string/home_name"
        app:showAsAction="never"></item>
    <item android:id="@+id/settings"
        android:title="@string/settings_name"
        app:showAsAction="never"></item>
    <item android:id="@+id/search"
        android:title="@string/search_name"
        android:icon="@drawable/search_icon"
        app:showAsAction="always"></item>
    <item android:id="@+id/playstore"
        android:title="@string/play_store_name"
        android:icon="@drawable/google_play_store_logo"
        app:showAsAction="always"></item>
    <item android:id="@+id/exit"
        android:title="@string/exit_name"
        app:showAsAction="never"></item>
</menu>